// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should look as expected in the DISABLED state 1`] = `
.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.375rem;
}

.emotion-0 {
  color: #000000;
  font-size: 0.875rem;
  font-weight: 500;
  -webkit-letter-spacing: 0.02438rem;
  -moz-letter-spacing: 0.02438rem;
  -ms-letter-spacing: 0.02438rem;
  letter-spacing: 0.02438rem;
  line-height: 1.6;
  margin-bottom: 0;
}

.emotion-0::first-letter {
  text-transform: capitalize;
}

.emotion-1 {
  font-size: 0.75rem;
  -webkit-letter-spacing: 0.01375rem;
  -moz-letter-spacing: 0.01375rem;
  -ms-letter-spacing: 0.01375rem;
  letter-spacing: 0.01375rem;
  line-height: 1.5;
  color: #98a0ac;
  min-height: auto;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 3px;
}

.emotion-3 {
  background: #F9F9FA;
  border: 1px solid transparent;
  border-radius: 4px;
  font-size: 0.75rem;
  height: 3.125rem;
  padding: 0.625rem 1.25rem;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  width: 100%;
  color: #000000;
}

.emotion-3::placeholder {
  color: #98a0ac;
}

.emotion-3::-webkit-input-placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3::-moz-placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3:-ms-input-placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3::placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3:hover {
  background: #F2F2F2;
  border-color: transparent;
}

.emotion-3:focus,
.emotion-3:active {
  border: 1px solid #4284FC;
  background: #FFFFFF !important;
}

.emotion-3:focus:hover,
.emotion-3:active:hover {
  background: #FFFFFF !important;
}

.emotion-3[disabled] {
  background: #f0f0f0 !important;
}

.emotion-5 .control-label {
  color: #AAB8C2;
}

.emotion-5 .base-input {
  background-color: #f0f0f0;
  cursor: not-allowed;
}

.emotion-5 .base-input::-webkit-input-placeholder {
  color: #AAB8C2;
  padding-left: 0 !important;
}

.emotion-5 .base-input::-moz-placeholder {
  color: #AAB8C2;
  padding-left: 0 !important;
}

.emotion-5 .base-input:-ms-input-placeholder {
  color: #AAB8C2;
  padding-left: 0 !important;
}

.emotion-5 .base-input::placeholder {
  color: #AAB8C2;
  padding-left: 0 !important;
}

.emotion-5 .base-input:hover,
.emotion-5 .base-input:focus {
  background-color: #F2F2F2 !important;
  border: none;
}

.emotion-5 .help-block {
  color: #AAB8C2;
}

.emotion-5 .password-strength-bar {
  border-radius: 2px;
}

.emotion-5 .password-strength-bar div[style='width: 4px;'] {
  display: none;
}

.emotion-5 .password-strength-bar > div {
  margin-top: 12px !important;
  max-width: 13.625rem;
}

.emotion-5 .password-strength-bar > div > div {
  -webkit-transition: 0.5s ease;
  transition: 0.5s ease;
  height: 10px !important;
}

.emotion-5 .password-strength-bar p {
  margin: 0 !important;
  position: absolute;
  right: 0;
  top: -5px;
  font-size: 0.75rem !important;
}

.emotion-5 .password-strength-bar.very-weak > div > div:first-of-type {
  background-color: #d9001b !important;
}

<body>
  <div>
    <div
      class="emotion-5"
      disabled=""
    >
      <div
        class="input-header emotion-2"
      >
        <label
          class="rs-control-label control-label emotion-0"
          for="username"
        >
          <span>
            User Name
            <span
              style="color: red;"
            />
          </span>
        </label>
        <span
          class="rs-help-block help-block emotion-1"
        />
      </div>
      <div
        class="emotion-4"
      >
        <input
          autocomplete="off"
          class="rs-input base-input undefined emotion-3"
          disabled=""
          id="username"
          name="username"
          placeholder="Enter username"
          type="text"
          value=""
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</body>
`;

exports[`should look as expected in the Invalid state 1`] = `
.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.375rem;
}

.emotion-0 {
  color: #000000;
  font-size: 0.875rem;
  font-weight: 500;
  -webkit-letter-spacing: 0.02438rem;
  -moz-letter-spacing: 0.02438rem;
  -ms-letter-spacing: 0.02438rem;
  letter-spacing: 0.02438rem;
  line-height: 1.6;
  margin-bottom: 0;
}

.emotion-0::first-letter {
  text-transform: capitalize;
}

.emotion-1 {
  font-size: 0.75rem;
  -webkit-letter-spacing: 0.01375rem;
  -moz-letter-spacing: 0.01375rem;
  -ms-letter-spacing: 0.01375rem;
  letter-spacing: 0.01375rem;
  line-height: 1.5;
  color: #98a0ac;
  min-height: auto;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 3px;
}

.emotion-3 {
  background: #F9F9FA;
  border: 1px solid transparent;
  border-radius: 4px;
  font-size: 0.75rem;
  height: 3.125rem;
  padding: 0.625rem 1.25rem;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  width: 100%;
  color: #000000;
}

.emotion-3::placeholder {
  color: #98a0ac;
}

.emotion-3::-webkit-input-placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3::-moz-placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3:-ms-input-placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3::placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3:hover {
  background: #F2F2F2;
  border-color: transparent;
}

.emotion-3:focus,
.emotion-3:active {
  border: 1px solid #4284FC;
  background: #FFFFFF !important;
}

.emotion-3:focus:hover,
.emotion-3:active:hover {
  background: #FFFFFF !important;
}

.emotion-3[disabled] {
  background: #f0f0f0 !important;
}

.emotion-5 .base-input {
  background-color: #FFFFFF;
  border: 1px solid #d9001b;
  color: #d9001b;
}

.emotion-5 .base-input:hover {
  background-color: #FFFFFF;
  border: 1px solid #d9001b;
}

.emotion-5 .password-strength-bar {
  border-radius: 2px;
}

.emotion-5 .password-strength-bar div[style='width: 4px;'] {
  display: none;
}

.emotion-5 .password-strength-bar > div {
  margin-top: 12px !important;
  max-width: 13.625rem;
}

.emotion-5 .password-strength-bar > div > div {
  -webkit-transition: 0.5s ease;
  transition: 0.5s ease;
  height: 10px !important;
}

.emotion-5 .password-strength-bar p {
  margin: 0 !important;
  position: absolute;
  right: 0;
  top: -5px;
  font-size: 0.75rem !important;
}

.emotion-5 .password-strength-bar.very-weak > div > div:first-of-type {
  background-color: #d9001b !important;
}

<body>
  <div>
    <div
      class="emotion-5"
    >
      <div
        class="input-header emotion-2"
      >
        <label
          class="rs-control-label control-label emotion-0"
          for="username"
        >
          <span>
            User Name
            <span
              style="color: red;"
            />
          </span>
        </label>
        <span
          class="rs-help-block help-block emotion-1"
        />
      </div>
      <div
        class="emotion-4"
      >
        <input
          autocomplete="off"
          class="rs-input base-input undefined emotion-3"
          id="username"
          name="username"
          placeholder="Enter username"
          type="text"
          value=""
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</body>
`;

exports[`should look as expected in the NORMAL state 1`] = `
.emotion-5 .password-strength-bar {
  border-radius: 2px;
}

.emotion-5 .password-strength-bar div[style='width: 4px;'] {
  display: none;
}

.emotion-5 .password-strength-bar > div {
  margin-top: 12px !important;
  max-width: 13.625rem;
}

.emotion-5 .password-strength-bar > div > div {
  -webkit-transition: 0.5s ease;
  transition: 0.5s ease;
  height: 10px !important;
}

.emotion-5 .password-strength-bar p {
  margin: 0 !important;
  position: absolute;
  right: 0;
  top: -5px;
  font-size: 0.75rem !important;
}

.emotion-5 .password-strength-bar.very-weak > div > div:first-of-type {
  background-color: #d9001b !important;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.375rem;
}

.emotion-0 {
  color: #000000;
  font-size: 0.875rem;
  font-weight: 500;
  -webkit-letter-spacing: 0.02438rem;
  -moz-letter-spacing: 0.02438rem;
  -ms-letter-spacing: 0.02438rem;
  letter-spacing: 0.02438rem;
  line-height: 1.6;
  margin-bottom: 0;
}

.emotion-0::first-letter {
  text-transform: capitalize;
}

.emotion-1 {
  font-size: 0.75rem;
  -webkit-letter-spacing: 0.01375rem;
  -moz-letter-spacing: 0.01375rem;
  -ms-letter-spacing: 0.01375rem;
  letter-spacing: 0.01375rem;
  line-height: 1.5;
  color: #98a0ac;
  min-height: auto;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 3px;
}

.emotion-3 {
  background: #F9F9FA;
  border: 1px solid transparent;
  border-radius: 4px;
  font-size: 0.75rem;
  height: 3.125rem;
  padding: 0.625rem 1.25rem;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  width: 100%;
  color: #000000;
}

.emotion-3::placeholder {
  color: #98a0ac;
}

.emotion-3::-webkit-input-placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3::-moz-placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3:-ms-input-placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3::placeholder:first-letter {
  text-transform: capitalize;
}

.emotion-3:hover {
  background: #F2F2F2;
  border-color: transparent;
}

.emotion-3:focus,
.emotion-3:active {
  border: 1px solid #4284FC;
  background: #FFFFFF !important;
}

.emotion-3:focus:hover,
.emotion-3:active:hover {
  background: #FFFFFF !important;
}

.emotion-3[disabled] {
  background: #f0f0f0 !important;
}

<body>
  <div>
    <div
      class="emotion-5"
    >
      <div
        class="input-header emotion-2"
      >
        <label
          class="rs-control-label control-label emotion-0"
          for="username"
        >
          <span>
            User Name
            <span
              style="color: red;"
            />
          </span>
        </label>
        <span
          class="rs-help-block help-block emotion-1"
        />
      </div>
      <div
        class="emotion-4"
      >
        <input
          autocomplete="off"
          class="rs-input base-input undefined emotion-3"
          id="username"
          name="username"
          placeholder="Enter username"
          type="text"
          value=""
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</body>
`;
